infra/modules/networking/main.tf
resource "aws_vpc" "main" {
	cidr_block = "10.0.0.0/16"
	enable_dns_hostnames = true
	enable_dns_support = true
	tags = { Name = "${var.project_name}-vpc" }
}

resource "aws_subnet" "public_1" {
	vpc_id = aws_vpc.main.id
	cidr_block = "10.0.1.0/24"
	availability_zone = "${var.aws_region}a"
	map_public_ip_on_launch = true
	tags = { Name = "${var.project_name}-public-subnet-1"}
}

resource "aws_subnet" "public_2" {
	vpc_id = aws_vpc.main.id
	cidr_block = "10.0.2.0/24"
	availability_zone = "${var.aws_region}c"
	map_public_ip_on_launch = true
	tags = { Name = "${var.project_name}-public-subnet-2"}
}

resource "aws_subnet" "private_1" {
	vpc_id = aws_vpc.main.id
	cidr_block = "10.0.3.0/24"
	availability_zone = "${var.aws_region}a"
	tags = { Name = "${var.project_name}-private-subnet-1"}
}

resource "aws_subnet" "private_2" {
	vpc_id = aws_vpc.main.id
	cidr_block = "10.0.4.0/24"
	availability_zone = "${var.aws_region}c"
	tags = { Name = "${var.project_name}-private-subnet-2"}
}

resource "aws_internet_gateway" "main" {
	vpc_id = aws_vpc.main.id
	tags = { Name = "${var.project_name}-igw"}
}

resource "aws_eip" "nat" {
	domain = "vpc"
	tags = { Name = "${var.project_name}-nat-eip" }
}

resource "aws_nat_gateway" "main" {
	connectivity_type = "public"
	allocation_id     = aws_eip.nat.id
	subnet_id         = aws_subnet.public_1.id
	tags = { Name = "${var.project_name}-nat" }
}

resource "aws_route_table" "public" {
	vpc_id = aws_vpc.main.id

	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.main.id
	}
	
	tags = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table" "private" {
	vpc_id = aws_vpc.main.id

	route {
		cidr_block = "0.0.0.0/0"
		nat_gateway_id = aws_nat_gateway.main.id
	}
	
	tags = { Name = "${var.project_name}-private-rt" }
}

resource "aws_route_table_association" "public_1" {
	subnet_id = aws_subnet.public_1.id
	route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
	subnet_id = aws_subnet.public_2.id
	route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_1" {
	subnet_id = aws_subnet.private_1.id
	route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_2" {
	subnet_id = aws_subnet.private_2.id
	route_table_id = aws_route_table.private.id
}
